@@ -1,3 +1,8 @@
+2007-05-07  Don Allingham  <don@gramps-project.org>
+	* src/ReportBase/_SimpleDoc.py: add support for tabs
+	* src/BaseDoc.py: add support for tabs	
+	* src/docgen/TextBufDoc.py: add support for tabs
+
 2007-05-07 Benny Malengier <bm@cage.ugent.be>
 	* src/GrampsDb/_GrampsBSDDB.py: upgrade of grdb now sets correct notetype, and 
           inherits the public/private setting of the parent object it is created from, 
